--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,7 @@ Desktop.ini
 ######################
 # Maven Wrapper
 ######################
+/.mvn/
 !.mvn/wrapper/maven-wrapper.jar
 
 ######################
